kube/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongodb
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: mongodb
    spec:
      volumes:
        - name: mongo-volume-db
          persistentVolumeClaim:
            claimName: mongo-db-claim-test
      containers:
      - image: jmillnerdev/mongodb-rpi:latest
        imagePullPolicy: ""
        name: mongodb
        ports:
        - containerPort: 27017
        resources: {}
        volumeMounts:
        - name: mongo-volume-db
          mountPath: "/data/db"
      restartPolicy: Always
      serviceAccountName: ""

status: {}
