kube/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mariadb
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mariadb
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: mariadb
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: "stats"
        - name: MYSQL_ROOT_PASSWORD
          value: "root"
        image: yobasystems/alpine-mariadb
        imagePullPolicy: "IfNotPresent"
        name: mariadb
        ports:
        - containerPort: 3306
        resources: {}
      restartPolicy: Always
      volumes:
        - name: mariadb-persistent-storage
          persistentVolumeClaim:
            claimName: mariadb-pv-claim
status: {}
