kube/stats-monitor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: stats-monitor
  name: stats-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: stats-monitor
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: stats-monitor
    spec:
      containers:
      - image: jmillnerdev/stats-monitor:latest
        imagePullPolicy: "Always"
        name: stats-monitor
        ports:
          - name: api
            containerPort: 8080
          - name: metrics
            containerPort: 8081
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /actuator/health
            port: metrics
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /actuator/health
            port: metrics
          initialDelaySeconds: 10
          periodSeconds: 60
      restartPolicy: Always

status: {}
