kube/prometheus.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
  labels:
    name: prometheus
spec:
  revisionHistoryLimit: 3
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      name: prometheus
  serviceName: prometheus
  template:
    metadata:
      labels:
        name: prometheus
        role: prometheus
    spec:
      containers:
        - name: prometheus
          imagePullPolicy: Always
          image: prom/prometheus-linux-armv7
          ports:
            - containerPort: 9090
              name: prometheus
          resources:
            requests:
              cpu: 0.5
              memory: 512M
            limits:
              cpu: 1
              memory: 1G
          volumeMounts:
            - mountPath: /etc/prometheus/
              name: config-volume
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-config
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    name: prometheus
spec:
  type: LoadBalancer
  ports:
    - port: 9090
      targetPort: 9090
      name: prometheus
  selector:
    name: prometheus
