kube/stats-monitor-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: stats-monitor
  name: stats-monitor
spec:
  ports:
    - name: api
      port: 8080
      targetPort: api
    - name: metrics
      port: 8081
      targetPort: metrics
  selector:
    io.kompose.service: stats-monitor
status:
  loadBalancer: {}
